@@ -283,7 +283,7 @@ void MainWindow::init_ui_manager()
 			sigc::mem_fun(*this, &MainWindow::on_fullscreen));
 
 	action_group->add(Gtk::ToggleAction::create("Mute",
-				_("MUTE"), _("MUTE"), true), 
+				_("MUTE"), _("MUTE"), false), 
 			sigc::mem_fun(*this, &MainWindow::on_menu_file_mute));
 
 	action_group->add(Gtk::Action::create("FileQuit", Gtk::Stock::QUIT),
@@ -555,10 +555,16 @@ bool MainWindow::on_doubleclick_picture(GdkEventButton* ev)
 void MainWindow::on_conf_window_quit()
 {
 	//std::cout << "on_conf_window_quit" << std::endl;
-	set_gmp_embed(atoi(GMConf["mplayer_embed"].c_str()));
 	save_conf();
+	set_gmp_embed(atoi(GMConf["mplayer_embed"].c_str()));
 }
 
+void MainWindow::on_conf_window_close(ConfWindow* dlg)
+{
+	g_assert(dlg == confwindow);
+	delete confwindow;
+	confwindow=NULL;
+}
 void MainWindow::on_gmplayer_start()
 {
 	reorder_widget(true);
@@ -623,6 +629,7 @@ MainWindow::MainWindow():
 	,gmp_width(-1)
 	,gmp_height(-1)
 	,gmp_embed(true)
+	,channels_hide(false)
 	,full_screen(false)
 	,window_width(1)
 	,window_height(1)
@@ -739,6 +746,10 @@ void MainWindow::set_gmp_embed(bool embed)
 {
 	gmp_embed = embed;
 
+	// 回写进配置中
+	char buf[32];
+	sprintf(buf, "%d", gmp_embed);
+	GMConf["mplayer_embed"] = buf;
 	// 这种写法太白痴了
 	Glib::RefPtr<Gtk::ToggleAction> menu = 
 		Glib::RefPtr<Gtk::ToggleAction>::cast_dynamic(action_group->get_action("ViewEmbedMplayer"));
@@ -748,6 +759,7 @@ void MainWindow::set_gmp_embed(bool embed)
 		channels_box->show();
 		action_group->get_action("ViewShowChannel")->set_sensitive(false);
 		action_group->get_action("FullScreen")->set_sensitive(false);
+		action_group->get_action("Mute")->set_sensitive(false);
 		this->resize(window_width, window_height);
 	}
 	else {
@@ -757,7 +769,9 @@ void MainWindow::set_gmp_embed(bool embed)
 		play_frame->show_all();
 		action_group->get_action("ViewShowChannel")->set_sensitive(true);
 		action_group->get_action("FullScreen")->set_sensitive(true);
-		set_channels_hide(channels_hide);
+		action_group->get_action("Mute")->set_sensitive(true);
+		//set_channels_hide(channels_hide);
+		set_channels_hide(atoi(GMConf["channels_hide"].c_str()));
 		this->resize(1, 1);
 	}
 	gmp->set_embed(gmp_embed);
@@ -792,12 +806,6 @@ MainWindow::~MainWindow()
 
 	sprintf(buf, "%d", window_height);
 	GMConf["main_window_height"] = buf;
-
-	sprintf(buf, "%d", channels_hide);
-	GMConf["channels_hide"] = buf;
-
-	sprintf(buf, "%d", gmp_embed);
-	GMConf["mplayer_embed"] = buf;
 
 	save_conf();
 }
@@ -870,13 +878,17 @@ void MainWindow::init()
 
 	set_channels_hide(channels_hide);
 	set_gmp_embed(gmp_embed);
-	Glib::RefPtr<Gtk::ToggleAction> menu = 
-		Glib::RefPtr<Gtk::ToggleAction>::cast_dynamic(action_group->get_action("Mute"));
-	menu->set_active(false);
+//	Glib::RefPtr<Gtk::ToggleAction> menu = 
+//		Glib::RefPtr<Gtk::ToggleAction>::cast_dynamic(action_group->get_action("Mute"));
+	//menu->set_active(false);
 }
 
 void MainWindow::save_conf()
 {
+
+	GMConf["channels_hide"] = channels_hide?"1":"0";
+	GMConf["mplayer_embed"] = gmp_embed?"1":"0";
+
 	char buf[512];
 	char* homedir = getenv("HOME");
 	snprintf(buf, 512,"%s/.gmlive/config",homedir);
